Add player loop controls and shared-content save UX